Fix horizontal scrolling on mobile devices

--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ html {
     background-color: white;
     font-family: Helvetica, Arial, sans-serif;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
 }
 
 *, *:before, *:after {
@@ -253,7 +256,8 @@ a, h1, h3 {
     }
 }
 
-footer {
+
+footer .footer-links {
     display: flex;
     flex-flow: row wrap;
     background-color: #E1E3E4;
